{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 82,
  "lineage": "e26d7062-b773-0460-bac6-7321eb606e12",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0b7465eb33f194d30",
            "domain": "vpc",
            "id": "eipalloc-0afe5d689f3d081ed",
            "network_interface": "eni-00fbe01b235ebbe27",
            "private_dns": "ip-172-31-18-218.ec2.internal",
            "private_ip": "172.31.18.218",
            "public_dns": "ec2-23-21-112-210.compute-1.amazonaws.com",
            "public_ip": "23.21.112.210",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-nat-a-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0629571535ed73352",
            "domain": "vpc",
            "id": "eipalloc-0c47693f16f91bfd3",
            "network_interface": "eni-028f7bcf9c0b51ad9",
            "private_dns": "ip-172-31-64-10.ec2.internal",
            "private_ip": "172.31.64.10",
            "public_dns": "ec2-3-216-49-208.compute-1.amazonaws.com",
            "public_ip": "3.216.49.208",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "terraform-nat-b-ip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607490206955:internet-gateway/igw-0738cb0e2d72dc669",
            "id": "igw-0738cb0e2d72dc669",
            "owner_id": "607490206955",
            "tags": {
              "Name": "terraform-igw"
            },
            "vpc_id": "vpc-0aef678a22294555c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0afe5d689f3d081ed",
            "id": "nat-0eef1d4a8abf5cc73",
            "network_interface_id": "eni-00fbe01b235ebbe27",
            "private_ip": "172.31.18.218",
            "public_ip": "23.21.112.210",
            "subnet_id": "subnet-0dd2d515d0d765f7e",
            "tags": {
              "Name": "terraform-nat-subnet-a"
            }
          },
          "dependencies": [
            "aws_eip.eip-a",
            "aws_subnet.public-subnet-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c47693f16f91bfd3",
            "id": "nat-0de1593ba99a65ebf",
            "network_interface_id": "eni-028f7bcf9c0b51ad9",
            "private_ip": "172.31.64.10",
            "public_ip": "3.216.49.208",
            "subnet_id": "subnet-0fa3b0786af11c2ff",
            "tags": {
              "Name": "terraform-nat-subnet-b"
            }
          },
          "dependencies": [
            "aws_eip.eip-b",
            "aws_subnet.public-subnet-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b49731bb24e5008c",
            "owner_id": "607490206955",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0eef1d4a8abf5cc73",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-app-subnet-a"
            },
            "vpc_id": "vpc-0aef678a22294555c"
          },
          "dependencies": [
            "aws_nat_gateway.nat-subnet-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app-subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bd9123edd52de45d",
            "owner_id": "607490206955",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0de1593ba99a65ebf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-app-subnet-b"
            },
            "vpc_id": "vpc-0aef678a22294555c"
          },
          "dependencies": [
            "aws_nat_gateway.nat-subnet-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-029a0746549da4946",
            "owner_id": "607490206955",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0738cb0e2d72dc669",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public-subnet-a"
            },
            "vpc_id": "vpc-0aef678a22294555c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-075e9f85bba6ef333",
            "owner_id": "607490206955",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0738cb0e2d72dc669",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public-subnet-b"
            },
            "vpc_id": "vpc-0aef678a22294555c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04638f6fab3297f35",
            "route_table_id": "rtb-0b49731bb24e5008c",
            "subnet_id": "subnet-0ed983d3af4969a35"
          },
          "dependencies": [
            "aws_eip.eip-a",
            "aws_nat_gateway.nat-subnet-a",
            "aws_route_table.app-subnet-a",
            "aws_subnet.app-subnet-a",
            "aws_subnet.public-subnet-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a33b1468a28cbb7f",
            "route_table_id": "rtb-0bd9123edd52de45d",
            "subnet_id": "subnet-09c7166e78622293e"
          },
          "dependencies": [
            "aws_eip.eip-b",
            "aws_nat_gateway.nat-subnet-b",
            "aws_route_table.app-subnet-b",
            "aws_subnet.app-subnet-b",
            "aws_subnet.public-subnet-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a771c6c0000d5e3f",
            "route_table_id": "rtb-029a0746549da4946",
            "subnet_id": "subnet-0dd2d515d0d765f7e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-subnet-a",
            "aws_subnet.public-subnet-a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d923b3993caa08d7",
            "route_table_id": "rtb-075e9f85bba6ef333",
            "subnet_id": "subnet-0fa3b0786af11c2ff"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-subnet-b",
            "aws_subnet.public-subnet-b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607490206955:security-group/sg-05f5b99d4dda5eb95",
            "description": "managed by terrafrom for db PostgreSQL servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f5b99d4dda5eb95",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a61d07444e076fab"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-RDS-SG",
            "name_prefix": "",
            "owner_id": "607490206955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aef678a22294555c"
          },
          "dependencies": [
            "aws_security_group.wordpress",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607490206955:security-group/sg-0a61d07444e076fab",
            "description": "This is for terraforms wordpress web servers security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a61d07444e076fab",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "terraform-wordpress-SG",
            "name_prefix": "",
            "owner_id": "607490206955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-wordpress-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aef678a22294555c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607490206955:subnet/subnet-0ed983d3af4969a35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.32.0/20",
            "id": "subnet-0ed983d3af4969a35",
            "map_public_ip_on_launch": false,
            "owner_id": "607490206955",
            "tags": {
              "Name": "terraform-app-subnet-a"
            },
            "vpc_id": "vpc-0aef678a22294555c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app-subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607490206955:subnet/subnet-09c7166e78622293e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.80.0/20",
            "id": "subnet-09c7166e78622293e",
            "map_public_ip_on_launch": false,
            "owner_id": "607490206955",
            "tags": {
              "Name": "terraform-app-subnet-b"
            },
            "vpc_id": "vpc-0aef678a22294555c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data-subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607490206955:subnet/subnet-017060c39334202b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.48.0/20",
            "id": "subnet-017060c39334202b7",
            "map_public_ip_on_launch": false,
            "owner_id": "607490206955",
            "tags": {
              "Name": "terraform-data-subnet-a"
            },
            "vpc_id": "vpc-0aef678a22294555c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "data-subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607490206955:subnet/subnet-06fb238060fe4a32d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.96.0/20",
            "id": "subnet-06fb238060fe4a32d",
            "map_public_ip_on_launch": false,
            "owner_id": "607490206955",
            "tags": {
              "Name": "terraform-data-subnet-b"
            },
            "vpc_id": "vpc-0aef678a22294555c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607490206955:subnet/subnet-0dd2d515d0d765f7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.31.16.0/20",
            "id": "subnet-0dd2d515d0d765f7e",
            "map_public_ip_on_launch": false,
            "owner_id": "607490206955",
            "tags": {
              "Name": "terraform-public-subnet-a"
            },
            "vpc_id": "vpc-0aef678a22294555c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607490206955:subnet/subnet-0fa3b0786af11c2ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.31.64.0/20",
            "id": "subnet-0fa3b0786af11c2ff",
            "map_public_ip_on_launch": false,
            "owner_id": "607490206955",
            "tags": {
              "Name": "terraform-public-subnet-b"
            },
            "vpc_id": "vpc-0aef678a22294555c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:607490206955:vpc/vpc-0aef678a22294555c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0ed2994351b04c37a",
            "default_route_table_id": "rtb-05233491c18b7b5e5",
            "default_security_group_id": "sg-0752992a2954b7a01",
            "dhcp_options_id": "dopt-0a6e476463a17d392",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0aef678a22294555c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05233491c18b7b5e5",
            "owner_id": "607490206955",
            "tags": {
              "Name": "terraform-vpc"
            }
          }
        }
      ]
    }
  ]
}